Fix logo and tag line alignment bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -573,7 +573,7 @@ header {
   // position: absolute;
   // top: 71px;
   // left: 60px;
-  padding: 0 10px 10px 15px;
+  padding: 0 10px 10px 20px;
   width: auto;
   font: {
     size: 1.4em;
